Fix Wall Art image imports